--- a/misc/localization/workshopper_english.txt
+++ b/misc/localization/workshopper_english.txt
@@ -1,9 +1,44 @@
 "LocalizationData"
 {
 	"APP_INIT_FAIL_1" "Invalid or non existant SteamAppid.txt!"
-	"APP_INIT_FAIL_2" "Unable to initialize SteamAPI!"
+	"APP_INIT_FAIL_2" "Unable to initialize SteamAPI!"	
 	"MAIN_CREATE" "Create"
 	"MAIN_HELP" "Help"
-	"MAIN_REFRESH" "Refresh"
+	"MAIN_REFRESH" "Refresh"	
+	
+	"CREATION_FAILED1" "Unable to create item!"
+	"CREATION_FAILED2" "Unable to submit item!"
+	"CREATION_FAILED3" "Please fill out the fields first!"
+	"CREATION_FAILED4" "You have to select at least one tag!"
+	"CREATION_FAILED5" "You have to select an image!"
+	"CREATION_FAILED6" "You have to select the content directory!"
+	"CREATION_FAILED7" "The description cannot be more than %s1 characters long!"
+	"CREATION_FAILED8" "No files selected!"
+	"CREATION_FAILED9" "No image selected!"
+	"CREATION_FAILED10" "Image size is too big, 1MB is max!"
+	"CREATION_SUCCESS1" "Submitted item successfully!"
+	
+	"CREATION_CREATE" "Create Addon"
+	"CREATION_UPDATE" "Update Addon"
+	"CREATION_TITLE" "Title:"
+	"CREATION_DESCRIPTION" "Description:"
+	"CREATION_CHANGELOG" "Changelog:"
+	"CREATION_VIS_PUBLIC" "Public"
+	"CREATION_VIS_PRIVATE" "Private"
+	"CREATION_VIS_HIDDEN" "Hidden"
+	"CREATION_CONTEST_TAGS" "Contest:"
+	"CREATION_SELECT_IMAGE" "Select Image:"
+	"CREATION_SELECT_FILEDIR" "Select File Dir:"
 	"CREATION_WORKSHOP_CATEORY" "Select a workshop type"
+	
+	"ADDON_UPLOAD_STATE1" "Loading..."
+	"ADDON_UPLOAD_STATE2" "Preparing Content..."
+	"ADDON_UPLOAD_STATE3" "Uploading Content: %s1 / %s2 bytes"
+	"ADDON_UPLOAD_STATE4" "Configuring Content..."
+	"ADDON_UPLOAD_STATE5" "Committing Changes..."
+	
+	"ADDONLIST_FETCH_FAIL1" "Unable to fetch workshop items!"
+	"ADDONITEM_WHITELISTED" "Your map is whitelisted!"
+	
+	"FILE_SELECTION_IMAGE" "Select an image"
 }
